Add updating users

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,7 @@
 <div class="row">
-  <footer>
-    <div class="small-12 medium-4 column">
-      <h5>1item</h5>
-    </div>
-    <div class="small-12 medium-4 column">
-      <h5>2item</h5>
-    </div>
-    <div class="small-12 medium-4 column">
-      <h5>3item</h5>
+  <footer class="container">
+    <div class="small-8">
+      <small>I'm aware there should be a footer here.</small>
     </div>
   </footer>
 </div>
