--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,7 @@
     </ul>
     <section class="top-bar-section">
       <ul class="right">
+      <li><%= link_to "Users", users_path %></li>
         <li class="has-dropdown">
         <% if signed_in? %>
           <%= link_to "#{current_user.name}", '#' %>
@@ -15,7 +16,7 @@
         <% end %>
             <ul class="dropdown">
         <% if signed_in? %>
-            <li><%= link_to "Settings", '#' %></li>
+            <li><%= link_to "Settings", edit_user_path(current_user) %></li>
             <li><%= link_to "Sign out", '#' %></li>
         <% else %>
             <li><%= link_to "Sign up", signup_path %></li>
