--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
             <ul class="dropdown">
         <% if signed_in? %>
             <li><%= link_to "Settings", edit_user_path(current_user) %></li>
-            <li><%= link_to "Sign out", '#' %></li>
+            <li><%= link_to "Sign out", signout_path %></li>
         <% else %>
             <li><%= link_to "Sign up", signup_path %></li>
             <li><%= link_to "Sign in", signin_path %></li>
